# fc-recog

./: README.md  pyproject.toml  run.sh  utils.py  yoloface.py  yoloface_gpu.py
model-weights/: obtener_modelo.sh
yolo/: model.py  yolo.py
